fix: desktop side nav horiz. overscroll overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -25,6 +25,7 @@
   padding-top: 7rem;
   @media (min-width: 850px) {
     padding-top: 2rem;
+    padding-left: 7rem;
   }
 }
 
