--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -15,9 +15,10 @@
     align-items: flex-end;
     background-color: transparent;
     padding: 0;
-    width: auto;
-    height: auto;
     position: relative;
+    position: fixed;
+    width: 5rem;
+    height: 100%;
   }
 }
 
@@ -27,19 +28,12 @@
   @media (min-width: 850px) {
     padding: 0;
     display: flex;
-    width: 5rem;
     height: 100%;
     justify-content: center;
     background-color: #161d2f;
   }
 }
-.header-inner {
-  @media (min-width: 850px) {
-    position: fixed;
-    height: 100%;
-    width: 5rem; // set width to match parent and incase when there is scroll bar sticks it to right side of parent container
-  }
-}
+
 .header-content {
   flex-direction: row;
   display: flex;
